--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,11 +3,11 @@
  */
 
 // Colors
-$color-base: #222;
+$color-base: #eeeeee;
 $color-primary: #5D93FF;
 $color-secondary: #F7A046;
 
-$color-white: #FFF;
+$color-white: #1c2531;
 $color-gray: lighten($color-base, 40%);
 $color-gray-border: lighten($color-base, 77%);
 $color-gray-bg: lighten($color-base, 79%);
